<resources>
    <string name="app_name">Concoct</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newuser">New User</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="forget_password">Forget Password? Click here</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="logout">Logout</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
