<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newuser"
            android:textSize="22sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:gravity="center_horizontal|center"
            android:layout_marginTop="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_content_paste_black_24dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:background="@drawable/shape"
                android:layout_margin="10dp"
                android:textColorHint="@color/secondary_text"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/email"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:layout_width="match_parent"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/shape"
                android:layout_margin="10dp"
                android:textColorHint="@color/secondary_text"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="number"
                android:layout_margin="10dp"
                android:background="@drawable/shape"
                android:textColorHint="@color/secondary_text"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/password"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:inputType="textPassword"
                android:background="@drawable/shape"
                android:layout_margin="10dp"
                android:textColorHint="@color/secondary_text"
                android:padding="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="350dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/regbtn"
                android:background="@color/colorAccent"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>